--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.165.0",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
@@ -10,6 +11,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "massive": "^4.5.0",
+    "material-ui": "^0.20.0",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.0",
     "react": "^16.2.0",
